{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 128,
  "lineage": "b084f2a0-68d7-7853-9582-5e88ef523611",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:loadbalancer/app/litserve-endpoint-alb/dd5c488598f19b4e",
            "arn_suffix": "app/litserve-endpoint-alb/dd5c488598f19b4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "litserve-endpoint-alb-1171714494.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:407995386968:loadbalancer/app/litserve-endpoint-alb/dd5c488598f19b4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "litserve-endpoint-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c2ed81b8c543b55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c70fdffa367b0cc"
              },
              {
                "subnet_id": "subnet-0e867944b7d9fc287"
              }
            ],
            "subnets": [
              "subnet-08c70fdffa367b0cc",
              "subnet-0e867944b7d9fc287"
            ],
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:listener/app/litserve-endpoint-alb/dd5c488598f19b4e/2ce65126dbeab85c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:targetgroup/litserve-endpoint-lb-tg/6b68dbba4f3a256e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:407995386968:listener/app/litserve-endpoint-alb/dd5c488598f19b4e/2ce65126dbeab85c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:loadbalancer/app/litserve-endpoint-alb/dd5c488598f19b4e",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:targetgroup/litserve-endpoint-lb-tg/6b68dbba4f3a256e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:listener-rule/app/litserve-endpoint-alb/dd5c488598f19b4e/2ce65126dbeab85c/798868f0d4a88ab7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:407995386968:listener-rule/app/litserve-endpoint-alb/dd5c488598f19b4e/2ce65126dbeab85c/798868f0d4a88ab7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:listener/app/litserve-endpoint-alb/dd5c488598f19b4e/2ce65126dbeab85c",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407995386968:targetgroup/litserve-endpoint-lb-tg/6b68dbba4f3a256e",
            "arn_suffix": "targetgroup/litserve-endpoint-lb-tg/6b68dbba4f3a256e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:407995386968:targetgroup/litserve-endpoint-lb-tg/6b68dbba4f3a256e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "litserve-endpoint-lb-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:security-group/sg-07c2ed81b8c543b55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c2ed81b8c543b55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "litserve-endpoint-alb-sg",
            "name_prefix": "",
            "owner_id": "407995386968",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:security-group/sg-0e33e1206510d1236",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e33e1206510d1236",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c2ed81b8c543b55"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "litserve-endpoint-ecs-sg",
            "name_prefix": "",
            "owner_id": "407995386968",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e980c941c0a200cc",
            "arn": "arn:aws:ec2:us-east-1:407995386968:elastic-ip/eipalloc-0e980c941c0a200cc",
            "domain": "vpc",
            "id": "eipalloc-0e980c941c0a200cc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-30-15.compute-1.amazonaws.com",
            "public_ip": "3.225.30.15",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9383d806ed8f8b8",
            "arn": "arn:aws:ec2:us-east-1:407995386968:elastic-ip/eipalloc-0c9383d806ed8f8b8",
            "domain": "vpc",
            "id": "eipalloc-0c9383d806ed8f8b8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-163-93.compute-1.amazonaws.com",
            "public_ip": "44.221.163.93",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:internet-gateway/igw-0fa63f4ff5de8e600",
            "id": "igw-0fa63f4ff5de8e600",
            "owner_id": "407995386968",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e980c941c0a200cc",
            "association_id": "eipassoc-0d45acbc9793804e5",
            "connectivity_type": "public",
            "id": "nat-060ec86ad0acb80bd",
            "network_interface_id": "eni-0864b46bf5d2265b2",
            "private_ip": "10.0.1.82",
            "public_ip": "3.225.30.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c70fdffa367b0cc",
            "tags_all": {
              "app": "litserve-endpoint"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9383d806ed8f8b8",
            "association_id": "eipassoc-0e4a0c09fe5fa4328",
            "connectivity_type": "public",
            "id": "nat-08f52efd7f23baee6",
            "network_interface_id": "eni-0cb0ec0988c2e1fee",
            "private_ip": "10.0.2.154",
            "public_ip": "44.221.163.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e867944b7d9fc287",
            "tags_all": {
              "app": "litserve-endpoint"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:route-table/rtb-068bdbd26131c236b",
            "id": "rtb-068bdbd26131c236b",
            "owner_id": "407995386968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060ec86ad0acb80bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:route-table/rtb-01f31863b706508b8",
            "id": "rtb-01f31863b706508b8",
            "owner_id": "407995386968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08f52efd7f23baee6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:route-table/rtb-0c2c69926df4c345a",
            "id": "rtb-0c2c69926df4c345a",
            "owner_id": "407995386968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa63f4ff5de8e600",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093a3658661256c02",
            "route_table_id": "rtb-068bdbd26131c236b",
            "subnet_id": "subnet-015dd10667e837d1f"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f2c5957a904089",
            "route_table_id": "rtb-01f31863b706508b8",
            "subnet_id": "subnet-06799473bf92c0cc4"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c10da0c717d82a19",
            "route_table_id": "rtb-0c2c69926df4c345a",
            "subnet_id": "subnet-08c70fdffa367b0cc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7f410d77f66b051",
            "route_table_id": "rtb-0c2c69926df4c345a",
            "subnet_id": "subnet-0e867944b7d9fc287"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:subnet/subnet-015dd10667e837d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015dd10667e837d1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407995386968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:subnet/subnet-06799473bf92c0cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06799473bf92c0cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407995386968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:subnet/subnet-08c70fdffa367b0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c70fdffa367b0cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407995386968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:subnet/subnet-0e867944b7d9fc287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e867944b7d9fc287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407995386968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "litserve-endpoint"
            },
            "vpc_id": "vpc-0b1180c6894b4cb50"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407995386968:vpc/vpc-0b1180c6894b4cb50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d323ca3b5d079d8",
            "default_route_table_id": "rtb-00e2d328fcfb4adc2",
            "default_security_group_id": "sg-072422c06a261ba40",
            "dhcp_options_id": "dopt-0578a99c568b994ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1180c6894b4cb50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e2d328fcfb4adc2",
            "owner_id": "407995386968",
            "tags_all": {
              "app": "litserve-endpoint"
            }
          }
        }
      ]
    }
  ]
}